# VulkanLearing

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  BuildShaders.bat  BuildShaders.sh  CMakeLists.txt  LogVulkanLearing.txt  Makefile  README.md  TODO.md  VKRenderer.cap  VKRenderer.sln  VulkanLearning.cap  VulkanLearning.geany  VulkanLearning.out  VulkanLearning.out-imgui.su  VulkanLearning.out-imgui_draw.su  VulkanLearning.out-imgui_impl_glfw.su  VulkanLearning.out-imgui_impl_vulkan.su  VulkanLearning.out-imgui_tables.su  VulkanLearning.out-imgui_widgets.su  VulkanLearning.out-main.su  build.ninja  imgui.ini  models.list  pruebaVulkan.sln  report1.qdrep  vulkan.info
.cmake/api/v1/reply/: cache-v2-6b3b1d93f26bd7606589.json  cmakeFiles-v1-b2dc9d258e00fa1e5fc0.json  codemodel-v2-ddb7cbb49f95c0b6ef84.json  index-2025-02-04T07-10-09-0394.json  target-ALL_BUILD-Release-910d5f345c2ccca25d95.json  target-VKRenderer-Debug-6de91c9b76127dbccd0b.json  target-VKRenderer-MinSizeRel-57ef9af94f5c0ad32b1b.json  target-VKRenderer-RelWithDebInfo-83618225d3238f1d86d5.json  target-VKRenderer-Release-4a5ce5a0fdc5f92f4c8b.json  target-ZERO_CHECK-MinSizeRel-48236426d0ea77c1653f.json  toolchains-v1-c2c27134fd833671e146.json
engine/: Camera.h  VKRenderer.vcxproj  VKRenderer.vcxproj.filters  main.cpp
engine/core/: CVarSystem.h  CmdSystem.cpp  DebugModels.h  Editor.cpp  Editor.h  PersistenceData.h  Resource.h  Types.h  VKRCubemap.cpp  VKRCubemap.h  VKRCubemapMaterial.cpp  VKRCubemapMaterial.h  VKRLight.cpp  VKRLight.h  VKRMaterial.cpp  VKRMaterial.h  VKRModel.cpp  VKRModel.h  VKRRenderPass.cpp  VKRRenderPass.h  VKRScene.cpp  VKRScene.h  VKRShader.h  VKRTexture.cpp  VKRTexture.h  VKRenderers.cpp  VKRenderers.h  debugUtils.h  jobs.h
engine/core/Editor/: Editor.cpp  Editor.h  EditorModels.h
engine/core/Materials/: VKRCubemapMaterial.cpp  VKRCubemapMaterial.h  VKRDebugMaterial.cpp  VKRDebugMaterial.h  VKRMaterial.cpp  VKRMaterial.h  VKRShader.cpp  VKRShader.h  VKRShadowMaterial.h  VKRTexture.cpp  VKRTexture.h
engine/core/Objects/: DebugModels.h  VKRCubemap.cpp  VKRCubemap.h  VKRLight.cpp  VKRLight.h  VKRModel.cpp  VKRModel.h
engine/editor/: Editor.cpp  Editor.h  EditorModels.h
engine/filesystem/: PersistenceData.h  Resource.h  ResourceManager.cpp  ResourceManager.h  gltfReader.cpp  gltfReader.h  savedata.h  shader_compiler.cpp
engine/input/: DeviceInput.cpp  DeviceInput.h
engine/memory/: a_sort.cpp  mem_alloc.cpp  mem_alloc.h
engine/perfmon/: Custom.h
engine/shaders/: Cubemap.frag  Cubemap.frag.spv  Cubemap.vert  Cubemap.vert.spv  Debug.frag  Debug.vert  Grid.frag  Grid.vert  Quad.frag  Quad.vert  Shadow.vert  Shadow.vert.spv  Standard.comp  Standard.frag  Standard.frag.spv  Standard.vert  Standard.vert.spv  cubemap.frag.spv  dbgFrag.spv  dbgVert.spv  frag.spv  shadow.vert.spv  vert.spv
engine/video/: GPUParticle.h  Types.h  VKBackend.cpp  VKBackend.h  VKBufferObjects.h  VKDevice.cpp  VKDevice.h  VKRRenderable.h  VKRUtils.cpp  VKRUtils.h  VKRenderCommon.h  VKRenderable.cpp  VKRenderable.h
pruebaVulkan/: DebugModels.h  Editor.cpp  Editor.h  Types.h  VKBackend.cpp  VKBackend.h  VKRCubemap.cpp  VKRCubemap.h  VKRCubemapMaterial.cpp  VKRCubemapMaterial.h  VKRDebugMaterial.h  VKRMaterial.cpp  VKRMaterial.h  VKRModel.cpp  VKRModel.h  VKRRenderPass.cpp  VKRRenderPass.h  VKRScene.cpp  VKRScene.h  VKRShader.h  VKRShadowMaterial.h  VKRTexture.cpp  VKRTexture.h  VKRUtils.h  VKRenderers.cpp  VKRenderers.h  debugUtils.h  defines.h  main.cpp  pruebaVulkan.cpp  pruebaVulkan.vcxproj  pruebaVulkan.vcxproj.filters  save.txt  stdafx.cpp
pruebaVulkan/resources/Shaders/: Standard.vert
resources/Shaders/: Cubemap.frag  Cubemap.vert  Debug.frag  Debug.vert  Shadow.vert  Standard.frag  Standard.vert  cubemap.frag.spv  cubemap.vert.spv  dbgVert.spv  frag.spv  shadow.vert.spv  vert.spv
